--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body{
     z-index: 2;
 } */
 
-.about-text{
+/* .about-text{
     border-radius: 0px 80px 0px 0px;
     margin-top: 30vh;
 }
@@ -126,7 +126,7 @@ body{
     margin-left: 60vh;
     margin-top: 10vh;
     margin-bottom: 20vh;
-}
+} */
 
 @media (min-width: 375px) and (max-width: 575.98px) {
 
